--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -825,7 +825,7 @@ fsdj opij
   min-height: 160px;
 }
 
-.php-email-form .error-message {
+.submit-email-form .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -834,10 +834,10 @@ fsdj opij
   margin-bottom: 15px;
   font-weight: 600;
 }
-.php-email-form .error-message br + br {
+.submit-email-form .error-message br + br {
   margin-top: 25px;
 }
-.php-email-form .sent-message {
+.submit-email-form .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -846,14 +846,14 @@ fsdj opij
   font-weight: 600;
   margin-bottom: 15px;
 }
-.php-email-form .loading {
+.submit-email-form .loading {
   display: none;
   background: #fff;
   text-align: center;
   padding: 15px;
   margin-bottom: 15px;
 }
-.php-email-form .loading:before {
+.submit-email-form .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
